--- a/src/components/molecule/Slider/Slider.html
+++ b/src/components/molecule/Slider/Slider.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div style="width: 20%;">
-        <label for="customRange1" class="form-label">Example range</label>
+        <label for="customRange1" class="form-label">Minimum Points Required</label>
         <input type="range" class="form-range" min="0" max="100" id="customRange2">
     </div>
 </body>
