Editted Slider.vue, Slider.html and Textbox.vue

--- a/src/components/molecule/TextBox/Textbox.html
+++ b/src/components/molecule/TextBox/Textbox.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    name:</br>
-    <input type="text" value="large"></body>
+    <span>Name: </span>
+    <input type="text" value="large">
 </html>
 
 <style>
