--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,23 @@
-$primary-color: rgb(0, 204, 255);
-$secondary-color: red;
+$white: #fff;
+$black: #000;
+$dark: #2E2D2D;
+$grey: #666;
+$light: #fafafa;
+$transparent: rgba(0,0,0,0);
+$purple: #987BEC;
 
-.tablet {
-    width: 768px;
-}
+// main colors
+$primary: #131A58;
+$secondary: #5360BD;
+$success: #38A09C;
+$success-light: #47E6B1;
+$info: #FF924D;
+$link: $secondary;
+$warning: #D86485;
+$danger: $warning;
+$disabled: #C4C4C4;
+
+$desktop: 1440px;
+$tablet: 768px;
+$moblie: 375px;
+
