--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -5,6 +5,7 @@ $grey: #666;
 $light: #fafafa;
 $transparent: rgba(0,0,0,0);
 $purple: #987BEC;
+$blue: #1ea7fd;
 
 // main colors
 $primary: #131A58;
