--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -17,6 +17,7 @@ $link: $secondary;
 $warning: #D86485;
 $danger: $warning;
 $disabled: #C4C4C4;
+$pop-out: #f7f7ff;
 
 $desktop: 1440px;
 $tablet: 768px;
