tutorial video source code

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -7,19 +7,5 @@ $transparent: rgba(0, 0, 0, 0);
 $purple: #987bec;
 $blue: #1ea7fd;
 $red: #ff002b;
-
-// main colors
-$primary: #131a58;
-$secondary: #5360bd;
-$success: #38a09c;
-$success-light: #47e6b1;
-$info: #ff924d;
-$link: $secondary;
-$warning: #d86485;
-$danger: $warning;
-$disabled: #c4c4c4;
 $pop-out: #f7f7ff;
-
-$desktop: 1440px;
-$tablet: 768px;
-$moblie: 375px;
+$dark-purple: #5360bd;
